# VulkanEngine

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
cmake/: addmodule.cmake
engine/: CMakeLists.txt
engine/src/: main.cpp
include/core/: engine.hpp
modules/logger/: CMakeLists.txt
modules/logger/include/: logger.hpp
modules/logger/src/: logger.cpp
modules/logger/tests/: CMakeLists.txt  test_logger.cpp
modules/platform/: CMakeLists.txt
modules/platform/include/: platform.hpp
modules/platform/tests/: CMakeLists.txt  test_platform.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/include/: renderer.hpp
modules/renderer/src/: renderer.cpp
modules/renderer/tests/: CMakeLists.txt  test_renderer.cpp
modules/window/: CMakeLists.txt
modules/window/include/: window.hpp
modules/window/src/: window.cpp
modules/window/tests/: CMakeLists.txt
